less Contrast Fix

--- a/inspirus/index.css
+++ b/inspirus/index.css
@@ -313,3 +313,6 @@ opacity: 0;
   border: 1px solid;
   padding: 6px;
 }
+#Scene{
+  -webkit-mask-image: linear-gradient(to bottom, black 0%, transparent 60%);
+}
